// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxModal customize 1`] = `
<div>
  <dialog
    class="modal dialog max-xlarge:fullscreen xlarge scrollable bazinga"
    open=""
    tabindex="-1"
  >
    Test
  </dialog>
</div>
`;

exports[`loads and displays CxModal component 1`] = `
<div>
  <dialog
    class="modal dialog"
  >
    Test
  </dialog>
</div>
`;
